Fix button onclick event and update background colors

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <a href="#contact">Contact Us</a>
         </div>
         <div id="button-wrapper">
-            <button onclick="window.location.href = 'signinLogin.html';" id="log-in">Log In</button>
+            <button onclick="location.href = 'signinLogin.html';" id="log-in">Log In</button>
             <button id="sign-in">Sign In</button>
         </div>
     </div>
