Remove unused login/signup code

--- a/src/web_pages/signinLogin.html
+++ b/src/web_pages/signinLogin.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="sign up or login" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="LoginSignup.css">
+    <link rel="stylesheet" href="../css/LoginSignup.css">
 </head>
 
 <body>
@@ -37,7 +37,8 @@
             <div class="submit gray" id="loginButton" >Login</div>
         </div>
     </div>
-    <script src="Account.js"></script>
+    <link rel="stylesheet" href="../css/LoginSignup.css">
+    <script src="../scripts/account.js"></script>
     <!-- <script>
         function setAction(action) {
             document.getElementById('action').textContent = action;
