Update button links and variable declarations

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
             <a href="#contact">Contact Us</a>
         </div>
         <div id="button-wrapper">
-            <button onclick="location.href = 'signinLogin.html';" id="log-in">Log In</button>
-            <button id="sign-in">Sign In</button>
+            <a href="./web_pages/signinLogin.html"><button id="log-in">Log In</button></a>
+            <a href="./web_pages/signinLogin.html"><button id="sign-in">Sign In</button></a>
         </div>
     </div>
     <section id="intro"></section>
