Refactor login and signup CSS and HTML

--- a/src/web_pages/signinLogin.html
+++ b/src/web_pages/signinLogin.html
@@ -36,6 +36,21 @@
             <div class="submit" id="signUpButton" >Sign-up</div>
             <div class="submit gray" id="loginButton" >Login</div>
         </div>
+        <div class = "line"></div>
+
+        <!-- <div class = "googleSignIn">
+          <a href = "_" class = "googleSignInButton">
+            <img src = "../images/google.png" alt = "Google Sign In" class = "googleSignInImage">
+            <span>Sign in with Google</span>
+          </a>
+        </div> -->
+
+        <div class="media-options">
+          <a href="#" class="field google">
+              <img src="../images/google.png" alt="" class="google-img">
+              <span>Login with Google</span>
+          </a>
+      </div>
     </div>
     <link rel="stylesheet" href="../css/LoginSignup.css">
     <script src="../scripts/account.js"></script>
