Update LoginSignup.css and signinLogin.html

--- a/src/web_pages/signinLogin.html
+++ b/src/web_pages/signinLogin.html
@@ -45,7 +45,7 @@
           </a>
         </div> -->
 
-        <div class="media-options">
+        <div class="googleSignin">
           <a href="#" class="field google">
               <img src="../images/google.png" alt="" class="google-img">
               <span>Login with Google</span>
