about us example

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,19 @@
     </div>
     <section id="intro"></section>
     <section id="services"></section>
-    <section id="about"></section>
+    <section id="about">
+        <div class="about-container">
+            <div class="about-image">
+                <!-- Image content -->
+                <img src="./assets/about-us.png" alt="About Us Image">
+            </div>
+            <div class="about-text">
+                <!-- Text content -->
+                <h1>About Us</h1>
+                <p>This is where you can add the text about your company...</p>
+            </div>
+        </div>
+    </section>
     <section id="contact"></section>
 </body>
 </html>
