--- a/src/web_pages/signinLogin.html
+++ b/src/web_pages/signinLogin.html
@@ -2,7 +2,8 @@
 
 <html>
 
-    <!-- <title>Account</title> -->
+<!-- <title>Account</title> -->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,26 +18,27 @@
             <div class="text" id="action">Login</div>
             <div class="underline"></div>
         </div>
-        <div class="all_inputs">
+        <form class="all_inputs">
             <div id="nameInput" class="input" style="display:none;">
-                <input type="text" placeholder="Name" />
+                <input autocomplete="given-name" type="text" placeholder="Name" name="name" />
             </div>
 
             <div class="input">
-                <input type="email" placeholder="Email" />
+                <input autocomplete="email" type="email" placeholder="Email" name="email" />
             </div>
+
             <div class="input">
-                <input type="password" placeholder="Password" />
+                <input autocomplete="current-password" type="password" placeholder="Password" name="password" />
             </div>
-        </div>
+        </form>
         <div class="forgot_password">
             Forgot Password?<span>Click here!</span>
         </div>
         <div class="submit_container">
-            <div class="submit" id="signUpButton" >Sign-up</div>
-            <div class="submit gray" id="loginButton" >Login</div>
+            <div class="submit" id="signUpButton">Sign-up</div>
+            <div class="submit gray" id="loginButton">Login</div>
         </div>
-        <div class = "line"></div>
+        <div class="line"></div>
 
         <!-- <div class = "googleSignIn">
           <a href = "_" class = "googleSignInButton">
@@ -46,19 +48,14 @@
         </div> -->
 
         <div class="googleSignin">
-          <a href="#" class="field google">
-              <img src="../images/google.png" alt="" class="google-img">
-              <span>Login with Google</span>
-          </a>
-      </div>
+            <a href="#" class="field google">
+                <img src="../images/google.png" alt="" class="google-img">
+                <span>Login with Google</span>
+            </a>
+        </div>
     </div>
     <link rel="stylesheet" href="../css/LoginSignup.css">
     <script src="../scripts/account.js"></script>
 </body>
+
 </html>
-
-
-
-
-
-
