Fix styling issues in LoginSignup.css and add Google Sign-In functionality to signinLogin.html

--- a/src/web_pages/signinLogin.html
+++ b/src/web_pages/signinLogin.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="sign up or login" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="1023482491835-5dj72j1lssf5u1705gi29sabe89u5sdq.apps.googleusercontent.com.apps.googleusercontent.com">
     <link rel="stylesheet" href="../css/LoginSignup.css">
 </head>
 
@@ -47,15 +48,19 @@
           </a>
         </div> -->
 
-        <div class="googleSignin">
+        <!-- <div class="googleSignin" data-onsuccess="onSignIn">
             <a href="#" class="field google">
                 <img src="../images/google.png" alt="" class="google-img">
                 <span>Login with Google</span>
             </a>
-        </div>
+        </div> -->
+        <div id="g-signin2" data-onsuccess="onSignIn"></div>
     </div>
     <link rel="stylesheet" href="../css/LoginSignup.css">
     <script src="../scripts/account.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="../scripts/googleSignIn.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 </body>
 
 </html>
