contact us section

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,46 @@
     <section id="intro"></section>
     <section id="services"></section>
     <section id="about"></section>
-    <section id="contact"></section>
+    <section id="contact">
+
+        <div id="contact-heading">Get in Touch Now</div>
+        <div id="contact-container">
+            <form id="contact-form">
+                <input type="text" name="name" id="name-input" placeholder="Name">
+                <input type="email" name="email" id="email-input" placeholder="Email">
+                <textarea name="message" id="message-input" placeholder="Message"></textarea>
+                <button type="submit" id="submit-button">Send Message</button>
+            </form>
+        </div>
+        
+        
+        <div id="social-icons-container">
+            <a class="social-icon">
+            <img
+                class="socialIcon image-block"
+                src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb33.png"
+            ></img>
+            </a>
+            <a class="social-icon">
+            <img
+                class="socialIcon image-block"
+                src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb34.png"
+            ></img>
+            </a>
+            <a class="social-icon">
+            <img
+                class="socialIcon image-block"
+                src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb35.png"
+            ></img>
+            </a>
+            <a class="social-icon">
+            <img
+                class="socialIcon image-block"
+                src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb36.png"
+            ></img>
+            </a>
+        </div>
+
+    </section>
 </body>
 </html>
