completed about us page

--- a/src/index.html
+++ b/src/index.html
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/index.css" />
     <script type="module" defer src="app.js"></script>
-    <script src="https://kit.fontawesome.com/13e3511e22.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/13e3511e22.js"
+      crossorigin="anonymous"
+    ></script>
     <title>DS | Home</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="header">
-        <a id="logo-container" href="#"></a>
-        <div id="header-wrapper">
-            <a href="#services">Services</a>
-            <a href="#about">About Us</a>
-            <a href="#contact">Contact Us</a>
-        </div>
-        <div id="button-wrapper">
-            <button id="log-in">Log In</button>
-            <button id="sign-in">Sign In</button>
-        </div>
+      <a id="logo-container" href="#"></a>
+      <div id="header-wrapper">
+        <a href="#services">Services</a>
+        <a href="#about">About Us</a>
+        <a href="#contact">Contact Us</a>
+      </div>
+      <div id="button-wrapper">
+        <button id="log-in">Log In</button>
+        <button id="sign-in">Sign In</button>
+      </div>
     </div>
     <section id="intro"></section>
     <section id="services"></section>
     <section id="about">
-        <div class="about-container">
-            <div class="about-image">
-                <!-- Image content -->
-                <img src="./assets/about-us.png" alt="About Us Image">
-            </div>
-            <div class="about-text">
-                <!-- Text content -->
-                <h1>About Us</h1>
-                <p>This is where you can add the text about your company...</p>
-            </div>
+      <div class="about-container">
+        <div class="about-image">
+          <!-- Image content -->
+          <img src="./assets/about-us.png" alt="About Us Image" />
         </div>
+        <div class="about-text">
+          <!-- Text content -->
+          <h1>About Us</h1>
+          <p>
+            Our platform simplifies teamwork and boosts productivity. With
+            intuitive tools for project management and seamless communication,
+            we're here to help your team thrive. Join us today and revolutionize
+            the way you work together!
+          </p>
+          <button>Contact Us</button>
+        </div>
+      </div>
     </section>
+
     <section id="contact"></section>
-</body>
+  </body>
 </html>
