Refactor CSS and JavaScript code

--- a/src/web_pages/signinLogin.html
+++ b/src/web_pages/signinLogin.html
@@ -9,7 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="sign up or login" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-signin-client_id" content="1023482491835-5dj72j1lssf5u1705gi29sabe89u5sdq.apps.googleusercontent.com.apps.googleusercontent.com">
+    <meta name="google-signin-client_id"
+        content="1023482491835-5dj72j1lssf5u1705gi29sabe89u5sdq.apps.googleusercontent.com.apps.googleusercontent.com">
     <link rel="stylesheet" href="../css/LoginSignup.css">
 </head>
 
@@ -36,8 +37,9 @@
             Forgot Password?<span>Click here!</span>
         </div>
         <div class="submit_container">
-            <div class="submit" id="signUpButton">Sign-up</div>
-            <div class="submit gray" id="loginButton">Login</div>
+            <button class="submit" id="signUp">Sign-up</button>
+            <button class="submit gray" id="login">Login</button>
+
         </div>
         <div class="line"></div>
 
@@ -54,7 +56,7 @@
                 <span>Login with Google</span>
             </a>
         </div> -->
-        <div id="g-signin2" data-onsuccess="onSignIn"></div>
+        <!-- <div id="g-signin2" data-onsuccess="onSignIn"></div> -->
     </div>
     <link rel="stylesheet" href="../css/LoginSignup.css">
     <script src="../scripts/account.js"></script>
