switched from position relative to margins and improved icons

--- a/src/index.html
+++ b/src/index.html
@@ -39,28 +39,16 @@
         
         <div id="social-icons-container">
             <a class="social-icon">
-            <img
-                class="socialIcon image-block"
-                src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb33.png"
-            ></img>
+                <i class="fa-brands fa-square-facebook"></i>
             </a>
             <a class="social-icon">
-            <img
-                class="socialIcon image-block"
-                src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb34.png"
-            ></img>
+                <i class="fa-brands fa-linkedin"></i>
             </a>
             <a class="social-icon">
-            <img
-                class="socialIcon image-block"
-                src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb35.png"
-            ></img>
+                <i class="fa-brands fa-square-instagram"></i>
             </a>
             <a class="social-icon">
-            <img
-                class="socialIcon image-block"
-                src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb36.png"
-            ></img>
+                <i class="fa-brands fa-square-twitter"></i>
             </a>
         </div>
 
