contact us + footer done

--- a/src/index.html
+++ b/src/index.html
@@ -28,30 +28,28 @@
 
         <div id="contact-heading">Get in Touch Now</div>
         <div id="contact-container">
-            <form id="contact-form">
+            <div id="contact-form">
                 <input type="text" name="name" id="name-input" placeholder="Name">
                 <input type="email" name="email" id="email-input" placeholder="Email">
+            </div>
                 <textarea name="message" id="message-input" placeholder="Message"></textarea>
                 <button type="submit" id="submit-button">Send Message</button>
-            </form>
         </div>
         
-        
-        <div id="social-icons-container">
-            <a class="social-icon">
-                <i class="fa-brands fa-square-facebook"></i>
-            </a>
-            <a class="social-icon">
-                <i class="fa-brands fa-linkedin"></i>
-            </a>
-            <a class="social-icon">
-                <i class="fa-brands fa-square-instagram"></i>
-            </a>
-            <a class="social-icon">
-                <i class="fa-brands fa-square-twitter"></i>
-            </a>
-        </div>
-
     </section>
+    <div id="footer">
+        <a class="social-icon">
+            <i class="fa-brands fa-square-facebook"></i>
+        </a>
+        <a class="social-icon">
+            <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a class="social-icon">
+            <i class="fa-brands fa-square-instagram"></i>
+        </a>
+        <a class="social-icon">
+            <i class="fa-brands fa-square-twitter"></i>
+        </a>
+    </div>
 </body>
 </html>
