intro+services section done

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,26 @@
             <button id="sign-in">Sign In</button>
         </div>
     </div>
-    <section id="intro"></section>
-    <section id="services"></section>
+    <section id="intro">
+        
+        <p id = "intro-content">Where Creativity Meets Productivity. Your Ultimate Productivity Companion.</p>
+    </section>
+    <div class="features">
+    <h1>Features</h1>
+        </div>
+    </section>
+    <section id="services">
+        <div class="services-container">
+            <ol class = "services-content">
+                <li>Task Management</li>
+                <li>Gantt Chart</li>
+                <li>Time Tracking</li>
+                <li>Cross-Platform Sync</li>
+                <li>Dashboard Customisation</li>
+            </ol>
+            <img id="service-image" src="./contents/newservice.avif" alt="services">
+        </div>
+    </section>
     <section id="about"></section>
     <section id="contact"></section>
 </body>
