--- a/src/index.html
+++ b/src/index.html
@@ -29,23 +29,17 @@
     <section id="about">
       <div class="about-container">
         <div class="about-image">
-          <!-- Image content -->
           <img src="./assets/about-us.png" alt="About Us Image" />
         </div>
         <div class="about-text">
-          <!-- Text content -->
           <h1>About Us</h1>
           <p>
-            Our platform simplifies teamwork and boosts productivity. With
-            intuitive tools for project management and seamless communication,
-            we're here to help your team thrive. Join us today and revolutionize
-            the way you work together!
+            Our platform simplifies teamwork and boosts productivity.With intuitive tools for project management and seamless communication, we're here to help your team thrive. Join us today and revolutionize the way you work together!
           </p>
-          <button>Contact Us</button>
+          <a href="#contact">Contact Us</a>
         </div>
       </div>
     </section>
-
     <section id="contact"></section>
   </body>
 </html>
