login&signup page done without the googleAPI

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <script type="module" defer src="app.js"></script>
+    <script type="module" defer src="static/index.js"></script>
     <script src="https://kit.fontawesome.com/13e3511e22.js" crossorigin="anonymous"></script>
     <title>DS | Home</title>
 </head>
@@ -17,8 +17,8 @@
             <a href="#contact">Contact Us</a>
         </div>
         <div id="button-wrapper">
-            <a href="./web_pages/signinLogin.html"><button id="log-in">Log In</button></a>
-            <a href="./web_pages/signinLogin.html"><button id="sign-in">Sign In</button></a>
+            <a href="accessControl.html"><button id="log-in">Log In</button></a>
+            <a href="accessControl.html"><button id="sign-in">Sign In</button></a>
         </div>
     </div>
     <section id="intro"></section>
