--- a/src/accessControl.html
+++ b/src/accessControl.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-
-<html>
-
-<!-- <title>Account</title> -->
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="sign up or login" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-signin-client_id"
-        content="1023482491835-5dj72j1lssf5u1705gi29sabe89u5sdq.apps.googleusercontent.com.apps.googleusercontent.com">
-    <link rel="stylesheet" href="../css/LoginSignup.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="sign up or login" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="google-signin-client_id"
+        content="1023482491835-5dj72j1lssf5u1705gi29sabe89u5sdq.apps.googleusercontent.com.apps.googleusercontent.com"> -->
+        <link rel="stylesheet" href="css/accessControl.css">
+        <!-- <link rel="stylesheet" href="css/index.css"> -->
+        <script type="module" defer src="static/account.js"></script>
+        <!-- <script src="scripts/googleSignIn.js"></script> -->
+        <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
+        <!-- <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script> -->
+        <!-- <script src="https://kit.fontawesome.com/13e3511e22.js" crossorigin="anonymous"></script> -->
+    <title>DS | Log In</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="title">
-            <div class="text" id="action">Login</div>
+        <div class="header">
+            <div class="header-text" id="action">Log In</div>
             <div class="underline"></div>
         </div>
-        <form class="all_inputs">
+        <form class="all-inputs">
             <div id="nameInput" class="input" style="display:none;">
                 <input autocomplete="given-name" type="text" placeholder="Name" name="name" />
             </div>
@@ -33,13 +37,12 @@
                 <input autocomplete="current-password" type="password" placeholder="Password" name="password" />
             </div>
         </form>
-        <div class="forgot_password">
+        <div class="forgot-password">
             Forgot Password?<span>Click here!</span>
         </div>
-        <div class="submit_container">
+        <div class="submit-container">
             <button class="submit" id="signUp">Sign-up</button>
-            <button class="submit gray" id="login">Login</button>
-
+            <button class="submit gray" id="login">Log-in</button>
         </div>
         <div class="line"></div>
 
@@ -58,11 +61,4 @@
         </div> -->
         <!-- <div id="g-signin2" data-onsuccess="onSignIn"></div> -->
     </div>
-    <link rel="stylesheet" href="../css/LoginSignup.css">
-    <script src="../scripts/account.js"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script src="../scripts/googleSignIn.js"></script>
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 </body>
-
-</html>
