--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <section id="about">
       <div class="about-container">
         <div class="about-image">
-          <img src="./assets/about-us.png" alt="About Us Image" />
+          <img src="./contents/imgs/about-us.png" alt="About Us Image" />
         </div>
         <div class="about-text">
           <h1>About Us</h1>
@@ -38,7 +38,6 @@
       </div>
     </section>
     <section id="contact">
-
         <div id="contact-heading">Get in Touch Now</div>
         <div id="contact-container">
             <div id="contact-form">
@@ -48,7 +47,6 @@
                 <textarea name="message" id="message-input" placeholder="Message"></textarea>
                 <button type="submit" id="submit-button">Send Message</button>
         </div>
-        
     </section>
     <div id="footer">
         <a class="social-icon">
