--- a/src/index.html
+++ b/src/index.html
@@ -21,26 +21,38 @@
             <a href="accessControl.html"><button id="sign-in">Sign In</button></a>
         </div>
     </div>
+
     <section id="intro">
-        
-        <p id = "intro-content">Where Creativity Meets Productivity. Your Ultimate Productivity Companion.</p>
+        <div class="darken-background"></div>
+        <div id="company-name">
+            <span>D</span>
+            <span>I</span>
+            <span>S</span>
+            <span>C</span>
+            <span>O</span>
+            <span>V</span>
+            <span>E</span>
+            <span>R</span>
+            <span>Y</span>
+          </div>
     </section>
-    <div class="features">
-    <h1>Features</h1>
-        </div>
-    </section>
+
     <section id="services">
+        <div class="features">
+            <h1>Features</h1>
+        </div>
         <div class="services-container">
-            <ol class = "services-content">
-                <li>Task Management</li>
-                <li>Gantt Chart</li>
-                <li>Time Tracking</li>
-                <li>Cross-Platform Sync</li>
-                <li>Dashboard Customisation</li>
-            </ol>
+            <div class = "services-content">
+                <p>Task Management</p>
+                <p>Gantt Chart</p>
+                <p>Time Tracking</p>
+                <p>Cross-Platform Sync</p>
+                <p>Dashboard Customisation</p>
+            </div>
             <img id="service-image" src="./contents/newservice.avif" alt="services">
         </div>
     </section>
+
     <section id="about">
       <div class="about-container">
         <div class="about-image">
@@ -55,6 +67,7 @@
         </div>
       </div>
     </section>
+
     <section id="contact">
         <div id="contact-heading">Get in Touch Now</div>
         <div id="contact-container">
@@ -66,6 +79,7 @@
                 <button type="submit" id="submit-button">Send Message</button>
         </div>
     </section>
+
     <div id="footer">
         <a class="social-icon">
             <i class="fa-brands fa-square-facebook"></i>
