Commented out Google sign-in button in signinLogin.html

--- a/src/web_pages/signinLogin.html
+++ b/src/web_pages/signinLogin.html
@@ -54,7 +54,7 @@
                 <span>Login with Google</span>
             </a>
         </div> -->
-        <div id="g-signin2" data-onsuccess="onSignIn"></div>
+        <!-- <div id="g-signin2" data-onsuccess="onSignIn"></div> -->
     </div>
     <link rel="stylesheet" href="../css/LoginSignup.css">
     <script src="../scripts/account.js"></script>
