--- a/src/accessControl.html
+++ b/src/accessControl.html
@@ -21,7 +21,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="header-text" id="action">Log In</div>
+            <div class="header-text" id="action"><p>Log In</p></div>
             <div class="underline"></div>
         </div>
         <form class="all-inputs">
@@ -38,7 +38,7 @@
             </div>
         </form>
         <div class="forgot-password">
-            Forgot Password?<span>Click here!</span>
+            <p class = "temp">Forgot Password?</p> <span>Click here!</span>
         </div>
         <div class="submit-container">
             <button class="submit" id="signUp">Sign-up</button>
