Remove commented out code and add Google Sign-In script

--- a/src/accessControl.html
+++ b/src/accessControl.html
@@ -11,10 +11,9 @@
         <link rel="stylesheet" href="css/accessControl.css">
         <!-- <link rel="stylesheet" href="css/index.css"> -->
         <script type="module" defer src="static/account.js"></script>
-        <!-- <script src="scripts/googleSignIn.js"></script> -->
-        <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
-        <!-- <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script> -->
-        <!-- <script src="https://kit.fontawesome.com/13e3511e22.js" crossorigin="anonymous"></script> -->
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+
     <title>DS | Log In</title>
 </head>
 
@@ -46,19 +45,5 @@
         </div>
         <div class="line"></div>
 
-        <!-- <div class = "googleSignIn">
-          <a href = "_" class = "googleSignInButton">
-            <img src = "../images/google.png" alt = "Google Sign In" class = "googleSignInImage">
-            <span>Sign in with Google</span>
-          </a>
-        </div> -->
-
-        <!-- <div class="googleSignin" data-onsuccess="onSignIn">
-            <a href="#" class="field google">
-                <img src="../images/google.png" alt="" class="google-img">
-                <span>Login with Google</span>
-            </a>
-        </div> -->
-        <!-- <div id="g-signin2" data-onsuccess="onSignIn"></div> -->
     </div>
 </body>
