--- a/src/accessControl.html
+++ b/src/accessControl.html
@@ -12,6 +12,7 @@
         <!-- <link rel="stylesheet" href="css/index.css"> -->
         <script type="module" defer src="static/account.js"></script>
         <script src="https://apis.google.com/js/platform.js" async defer></script>
+        <script src="static/googleSignIn.js"></script>
 
 
     <title>DS | Log In</title>
