--- a/src/accessControl.html
+++ b/src/accessControl.html
@@ -3,19 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="sign up or login" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="google-signin-client_id"
-        content="1023482491835-5dj72j1lssf5u1705gi29sabe89u5sdq.apps.googleusercontent.com.apps.googleusercontent.com"> -->
-        <link rel="stylesheet" href="css/accessControl.css">
-        <!-- <link rel="stylesheet" href="css/index.css"> -->
-        <script type="module" defer src="static/account.js"></script>
-        <!-- <script src="scripts/googleSignIn.js"></script> -->
-        <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
-        <!-- <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script> -->
-        <!-- <script src="https://kit.fontawesome.com/13e3511e22.js" crossorigin="anonymous"></script> -->
     <title>DS | Log In</title>
+    <link rel="stylesheet" href="css/accessControl.css" />
+    <script type="module" defer src="static/account.js"></script>
+    <script src="static/auth.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
 </head>
 
 <body>
@@ -25,7 +18,7 @@
             <div class="underline"></div>
         </div>
         <form class="all-inputs">
-            <div id="nameInput" class="input" style="display:none;">
+            <div id="nameInput" class="input" style="display: none">
                 <input autocomplete="given-name" type="text" placeholder="Name" name="name" />
             </div>
 
@@ -45,20 +38,11 @@
             <button class="submit gray" id="login">Log-in</button>
         </div>
         <div class="line"></div>
-
-        <!-- <div class = "googleSignIn">
-          <a href = "_" class = "googleSignInButton">
-            <img src = "../images/google.png" alt = "Google Sign In" class = "googleSignInImage">
-            <span>Sign in with Google</span>
-          </a>
-        </div> -->
-
-        <!-- <div class="googleSignin" data-onsuccess="onSignIn">
-            <a href="#" class="field google">
-                <img src="../images/google.png" alt="" class="google-img">
-                <span>Login with Google</span>
-            </a>
-        </div> -->
-        <!-- <div id="g-signin2" data-onsuccess="onSignIn"></div> -->
-    </div>
+/////////////////////
+        <div class="googleSignin">
+            <a href="/auth/google">Sign in with Google</a>
+/////////////////////
+        </div>
+    
 </body>
+</html>
