Refactor CSS layout and update HTML structure

--- a/src/index.html
+++ b/src/index.html
@@ -52,28 +52,31 @@
             <img id="service-image" src="./contents/newservice.avif" alt="services">
         </div> -->
 
-        <div class="services-container">
-            <div class="task-management-container">
-                <div class="task-management">
-                    <h3>Task Manager</h3>
-                    <p>Build and manage teams in your workspace.</p>
-                </div>
-            </div>
-            <div class="deadline-tracker-container">
-                <div class="deadline-tracker">
-                    <h3>Deadline Tracker</h3>
-                    <p>Keep track of your project deadlines.</p>
-                </div>
-            </div>
-            <div class="file-sharing-container">
-                <div class="file-sharing">
-                    <h3>File Sharing</h3>
-                    <p>Share files with your team members.</p>
-                </div>
+
+        <div class="features-container">
+            <div class="task-management">
+                <h3>Task Manager</h3>
+                <p>Build and manage teams in your workspace.</p>
             </div>
 
-            <img id="service-image" src="./contents/newservice.avif" alt="services">
+
+
+            <div class="deadline-tracker">
+                <h3>Deadline Tracker</h3>
+                <p>Keep track of your project deadlines.</p>
+            </div>
+
+
+            <div class="file-sharing">
+                <h3>File Sharing</h3>
+                <p>Share files with your team members.</p>
+
+            </div>
         </div>
+
+        <img id="service-image" src="./contents/newservice.avif" alt="services">
+        </div>
+        
 
     </section>
 
