--- a/accessControl.html
+++ b/accessControl.html
@@ -4,39 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id"
-        content="15203078856-u0p12011dkvm9umtere0kcg7csgj24dg.apps.googleusercontent.com">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="sign up or login" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="google-signin-client_id"
-        content="1023482491835-5dj72j1lssf5u1705gi29sabe89u5sdq.apps.googleusercontent.com.apps.googleusercontent.com"> -->
-        <link rel="stylesheet" href="css/accessControl.css">
-        <!-- <link rel="stylesheet" href="css/index.css"> -->
-        <script type="module" defer src="static/account.js"></script>
-        <script src="https://apis.google.com/js/platform.js" async defer></script>
-        <script src="static/googleSignIn.js"></script>
-
-
+    <meta name="google-signin-client_id" content="15203078856-u0p12011dkvm9umtere0kcg7csgj24dg.apps.googleusercontent.com">
+    <link rel="stylesheet" href="src/css/accessControl.css">
+    <script type="module" defer src="src/static/account.js"></script>
+    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
+    <script src="static/googleSignIn.js"></script>
+    <script src="src/static/auth.js"></script>    
     <title>DS | Log In</title>
-    <link rel="stylesheet" href="css/accessControl.css" />
-    <script type="module" defer src="static/account.js"></script>
-    <script src="static/auth.js"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-
-    <!-- test -->
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-
 </head>
 
 <body>
+
     <div class="container">
+
         <div class="header">
+
             <div class="header-text" id="action">
                 <p>Log In</p>
             </div>
+
             <div class="underline"></div>
         </div>
+
         <form class="all-inputs">
             <div id="nameInput" class="input" style="display: none">
                 <input autocomplete="given-name" type="text" placeholder="Name" name="name" />
@@ -50,17 +39,20 @@
                 <input autocomplete="current-password" type="password" placeholder="Password" name="password" />
             </div>
         </form>
+
         <div class="forgot-password">
             <p class="temp">Forgot Password?</p> <span>Click here!</span>
         </div>
+
         <div class="submit-container">
             <button class="submit" id="signUp">Sign-up</button>
             <button class="submit gray" id="login">Log-in</button>
         </div>
+        
         <div class="line"></div>
 
-        <div class="googleSignin">
-            <a data-onsuccess="OnSignIn">Sign in with Google</a>
+        <!-- <div class="googleSignin">
+            <a data-onsuccess="OnSignIn">Sign in with Google</a> -->
 
             <!-- <div class = "googleSignIn">
           <a href = "_" class = "googleSignInButton">
@@ -77,8 +69,8 @@
         </div> -->
             <!-- <div id="g-signin2" data-onsuccess="onSignIn"></div> -->
 
-            <div class="g-signin2" data-onsuccess="onSignIn"></div>
-        </div>
+            <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        </div> -->
 </body>
 
 </html>
