minor link changes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <img id="service-image" src="./contents/newservice.avif" alt="services">
+        <img id="service-image" src="src/contents/newservice.avif" alt="services">
         </div>
 
     </section>
@@ -72,7 +72,7 @@
         <div class="about-container">
 
             <div class="about-image">
-                <img src="./contents/imgs/about-us.png" alt="About Us Image" />
+                <img src="src/contents/imgs/about-us.png" alt="About Us Image" />
             </div>
 
             <div class="about-text">
@@ -116,7 +116,7 @@
         <a class="social-icon">
             <i class="fa-brands fa-square-instagram"></i>
         </a>
-        
+
         <a class="social-icon">
             <i class="fa-brands fa-square-twitter"></i>
         </a>
