--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/css/index.css">
-    <script type="module" defer src="src/static/index.js"></script>
+    <link rel="stylesheet" href="./src/css/index.css">
+    <script type="module" defer src="./src/static/index.js"></script>
     <script src="https://kit.fontawesome.com/13e3511e22.js" crossorigin="anonymous"></script>
     <title>DS | Home</title>
 </head>
 
 <body>
     <div id="header">
+
         <a id="logo-container" href="#"></a>
+
         <div id="header-wrapper">
             <a href="#services">Services</a>
             <a href="#about">About Us</a>
             <a href="#contact">Contact Us</a>
         </div>
+
         <div id="button-wrapper">
-            <a href="accessControl.html"><button id="log-in">Log In</button></a>
-            <a href="accessControl.html"><button id="sign-in">Sign In</button></a>
+            <a href="./accessControl.html"><button id="log-in">Log In</button></a>
+            <a href="./accessControl.html"><button id="sign-in">Sign In</button></a>
         </div>
     </div>
 
@@ -35,34 +38,40 @@
             <span>V</span>
             <span>E</span>
             <span>R</span>
-            <span>Y</span>
+            <span>I</span>
+            <span>A</span>
         </div>
     </section>
 
-    <section id="services">
-        <div class="features">
-            <h1>We Offer</h1>
-        </div>
-
+    <section id="features">
+        
+        <h1>WE OFFER</h1>
         <div class="features-container">
+            
             <div class="task-management">
-                <h3>Task Manager</h3>
-                <p>Build and manage teams in your workspace.</p>
+                <i class="fa-solid fa-list-check"></i>
+                <div class="features-wrapper">
+                    <h2>Task Manager</h2>
+                    <p>Build and manage teams in your workspace.</p>
+                </div>
             </div>
 
             <div class="deadline-tracker">
-                <h3>Deadline Tracker</h3>
-                <p>Keep track of your project deadlines.</p>
+                <i class="fa-solid fa-calendar-days"></i>
+                <div class="features-wrapper">
+                    <h2>Deadline Tracker</h2>
+                    <p>Keep track of your project deadlines.</p>
+                </div>
             </div>
 
             <div class="file-sharing">
-                <h3>File Sharing</h3>
-                <p>Share files with your team members.</p>
+                <i class="fa-solid fa-file-zipper"></i>
+                <div class="features-wrapper">
+                    <h2>File Sharing</h2>
+                    <p>Share files with your team members.</p>
+                </div>
 
             </div>
-        </div>
-
-        <img id="service-image" src="src/contents/newservice.avif" alt="services">
         </div>
 
     </section>
@@ -72,7 +81,7 @@
         <div class="about-container">
 
             <div class="about-image">
-                <img src="src/contents/imgs/about-us.png" alt="About Us Image" />
+                <img src="./src/contents/imgs/about-us.png" alt="About Us Image" />
             </div>
 
             <div class="about-text">
