--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/css/index.css">
+    <link rel="stylesheet" href="./src/css/index.css?=1">
     <script type="module" defer src="./src/static/index.js"></script>
     <script src="https://kit.fontawesome.com/13e3511e22.js" crossorigin="anonymous"></script>
     <title>DS | Home</title>
@@ -98,7 +98,7 @@
 
     <section id="contact">
 
-        <div id="contact-heading">Get in Touch Now</div>
+        <div id="contact-heading">Get in Touch Now!</div>
 
         <div id="contact-container">
 
