--- a/src/deadlineChart.html
+++ b/src/deadlineChart.html
@@ -10,6 +10,10 @@
 <body>
     <h1>Deadline Chart</h1>
 
+    <p class="timescale">
+        Timescale: <span id="current-view">Day</span>
+    </p>
+
     <svg id="gantt"></svg>
 
     <div class="change-chart">
