--- a/accessControl.html
+++ b/accessControl.html
@@ -26,10 +26,7 @@
             <div class="underline"></div>
         </div>
 
-        <form class="all-inputs">
-            <div id="nameInput" class="input" style="display: none">
-                <input autocomplete="given-name" type="text" placeholder="Name" name="name" />
-            </div>
+        <form action="log_form.php" method="post" id="loginform" novalidate>
 
             <div class="input">
                 <input autocomplete="email" type="email" placeholder="Email" name="email" />
@@ -39,7 +36,7 @@
                 <input autocomplete="current-password" type="password" placeholder="Password" name="password" />
             </div>
         </form>
-
+        
         <div class="forgot-password">
             <p class="temp">Forgot Password?</p> <span>Click here!</span>
         </div>
@@ -51,26 +48,6 @@
         
         <div class="line"></div>
 
-        <!-- <div class="googleSignin">
-            <a data-onsuccess="OnSignIn">Sign in with Google</a> -->
-
-            <!-- <div class = "googleSignIn">
-          <a href = "_" class = "googleSignInButton">
-            <img src = "../images/google.png" alt = "Google Sign In" class = "googleSignInImage">
-            <span>Sign in with Google</span>
-          </a>
-        </div> -->
-
-            <!-- <div class="googleSignin" data-onsuccess="onSignIn">
-            <a href="#" class="field google">
-                <img src="../images/google.png" alt="" class="google-img">
-                <span>Login with Google</span>
-            </a>
-        </div> -->
-            <!-- <div id="g-signin2" data-onsuccess="onSignIn"></div> -->
-
-            <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div>
-        </div> -->
 </body>
 
 </html>
