Update link in accessControl.html

--- a/src/accessControl.html
+++ b/src/accessControl.html
@@ -11,11 +11,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google-signin-client_id"
         content="1023482491835-5dj72j1lssf5u1705gi29sabe89u5sdq.apps.googleusercontent.com.apps.googleusercontent.com"> -->
-        <link rel="stylesheet" href="css/accessControl.css">
-        <!-- <link rel="stylesheet" href="css/index.css"> -->
-        <script type="module" defer src="static/account.js"></script>
-        <script src="https://apis.google.com/js/platform.js" async defer></script>
-        <script src="static/googleSignIn.js"></script>
+    <link rel="stylesheet" href="css/accessControl.css">
+    <!-- <link rel="stylesheet" href="css/index.css"> -->
+    <script type="module" defer src="static/account.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="static/googleSignIn.js"></script>
 
 
     <title>DS | Log In</title>
@@ -79,7 +79,7 @@
 
             <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-            <a href="deadlineChart.html">Deadline Chart</a>
+            <a href="project.html">Deadline Chart</a>
         </div>
 </body>
 
