--- a/accessControl.html
+++ b/accessControl.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-signin-client_id" content="15203078856-u0p12011dkvm9umtere0kcg7csgj24dg.apps.googleusercontent.com">
-    <link rel="stylesheet" href="./src/css/accessControl.css">
-    <script type="module" defer src="./src/static/accessControl.js"></script>  
+    <link rel="stylesheet" href="./src/css/accessControl.css?=1">
+    <script type="module" defer src="./src/static/accessControl.js?=1"></script>  
     <title>DS | Log In</title>
 </head>
 
