registeration back-end php done

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
 
         <div id="button-wrapper">
-            <a href="./accessControl.html?access=logIn"><button id="log-in">Log In</button></a>
-            <a href="./accessControl.html?access=signUp"><button id="sign-up">Sign Up</button></a>
+            <a href="./accessControl.html"><button id="log-in">Log In</button></a>
+            <a href="./accessControl.html"><button id="sign-up">Sign Up</button></a>
         </div>
     </div>
 
