--- a/loginForm.html
+++ b/loginForm.html
@@ -17,16 +17,12 @@
 
         <div class="header">
 
-            <h1 id="header-text">Sign Up</h1>
+            <h1 id="header-text">Login</h1>
 
             <div class="underline"></div>
         </div>
 
-        <form action="reg_form.php" method="POST" id="signupform">
-
-            <div class="input">
-                <input type="text" id="username" name="username" placeholder="Username" required />
-            </div>
+        <form action="reg_form.php" method="POST" id="signupform">  
 
             <div class="input">
                 <input type="email" id="email" name="email" placeholder="Email" required />
@@ -36,17 +32,13 @@
                 <input type="password" id="password" name="password" placeholder="Password" required />
             </div>
 
-            <div class="input">
-                <input type="password" id="password" name="confirm_password" placeholder="Confirm Password" required />
-            </div>
-
             <div class="bttn">
-                <input type="submit" id="submit-form" value="Sign Up" />
+                <input type="submit" id="submit-form" value="Login" />
             </div>
         </form>
 
         <div id="info-container">
-            <span><p>Already have an account?</p><a id="login-link" class="info" href="./loginForm.html">Login</a></span>
+            <span><p>Dont have an account?</p><a id="signin-link" class="info" href="./accessControl.html">Signup</a></span>
         </div>
         <div class="line"></div>
     </div>
