--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-signin-client_id" content="15203078856-u0p12011dkvm9umtere0kcg7csgj24dg.apps.googleusercontent.com">
-    <link rel="stylesheet" href="./src/css/accessControl.css?=3">
+    <link rel="stylesheet" href="./src/css/accessControl.css?=5">
     <script type="module" defer src="./src/static/accessControl.js"></script>  
     <title>DS | Sign Up</title>
 </head>
@@ -21,7 +21,7 @@
             <input type="email" id="email" name="email"  placeholder="Email"  required/>
             <input type="password" id="password" name="password" placeholder="Password" required/>
             <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password" required/>
-            <input type="submit" id="submit-form" value="Sign Up"/>
+            <input type="submit" class="submit-form" value="Sign Up"/>
         </form>
 
         <a id="login-link" class="access-info" href="./accessControl.html?access=logIn">Already have an account?</a>
